--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,22 @@ license = "MIT OR CC0-1.0"
 [badges]
 circle-ci = { repository = "Herschel/puremp3" }
 
-[dependencies]
-bitstream-io = "0.8"
-byteorder = "1.3"
+
+[dependencies.bitstream-io]
+#version = "0.8"
+path = "../bitstream-io-fork"
+features = ["no_std"]
+
+[dependencies.byteorder]
+version = "1.3"
+default-features = false
+
+[dependencies.no_std_io]
+version = "0.6.0"
+optional = true
+
+[features]
+no_std = ["dep:no_std_io"]
 
 [dev-dependencies]
 # Used by plackback example
